fix angular final version

--- a/app/theme/app.css
+++ b/app/theme/app.css
@@ -1,4 +1,8 @@
 
-main h1{
-    color: red;
+
+main {
+    background-color: #fff;
+    min-height: 600px;
+    padding: 1em;
+    margin-top: 1em;
 }
